multiscreen: fixes for screen order race condition

Add a concept of a reorder transition running which says the
data from OutputOrderWatcher is not to be used at that moment

Is always possible that the internal state of
OutputOrderWatcher is inconsistent, because
"which outputs are connected right now" and
"what is the output order" come from 2 separate protocols
so there will be a time when the information from the output
order protocol doesn't agree with qApp->screens()

When there are those 3 things happening in quick order
* Setting the order
* resizing an output
* removing another output
we used to get an inconsistent state in OutputOrderWatcher
where the removed output is *not* removed from outputOrder

BUG:494616