shell/screenpool.cpp
@@ -281,7 +281,13 @@ void ScreenPool::handleScreenRemoved(QScreen *screen)
 
 void ScreenPool::handleOutputOrderChanged(const QStringList &newOrder)
 {
+    if (m_outputOrderWatcher->isReorderPending()) {
+        qCDebug(SCREENPOOL) << "Not executing handleOutputOrderChanged as the output order is in a pending state";
+        return;
+    }
+
     qCDebug(SCREENPOOL) << "handleOutputOrderChanged" << newOrder;
+
     QHash<QString, QScreen *> connMap;
     for (auto s : qApp->screens()) {
         connMap[s->name()] = s;
@@ -358,6 +364,8 @@ void ScreenPool::screenInvariants()
         return message;
     };
 
+    Q_ASSERT_X(!m_outputOrderWatcher->isReorderPending(), Q_FUNC_INFO, qUtf8Printable(debugMessage()));
+
     // Is the primary connector in sync with the actual primaryScreen? The only way it can get out of sync with primaryConnector() is the single fake screen/no
     // real outputs scenario
     Q_ASSERT_X(noRealOutputsConnected() || !m_availableScreens.isEmpty(),
@@ -415,6 +423,9 @@ QDebug operator<<(QDebug debug, const ScreenPool *pool)
     debug << "All screens, ordered by size:\t" << pool->m_sizeSortedScreens << '\n';
     debug << "All screen that QGuiApplication knows:\t" << qGuiApp->screens() << '\n';
     debug << "Screen order from outputOrderWatcher" << pool->m_outputOrderWatcher->outputOrder() << '\n';
+    if (pool->m_outputOrderWatcher->isReorderPending()) {
+        debug << "outputOrderWatcher is in an inconsistent state";
+    }
     return debug;
 }
 
